# youtubesummary

./: .gitignore  .proxy_config.json.example  .youtubesummary_history  .youtubesummary_history.json  COST_EXPLORER_PERMISSIONS.md  LICENSE  MCP_README.md  README.md  YOUTUBE_TRANSCRIPT_MCP_SUMMARY.md  backfill_video_dates.py  check_aws_billing_alternative.py  check_aws_transcribe_cost.py  download_audio.py  download_channel_transcripts.py  grant_cost_explorer_permissions.sh  kuber_compressed_transcript_aws.json  kuber_transcript.json  logging_utils.py  main.py  mcp_config_example.json  mcp_youtube_summarizer.py  mcp_youtube_transcript.py  pyproject.toml  requirements.txt  setup_helper.py  summarize.py  test_bedrock.py  test_claude.py  test_mcp_server.py  test_single_video.py  transcript_4v7tJ55rzs4.txt  youtubeSummarize.py  youtubeTranscript.py
.cache/: -4U0qniALAE.json  -4U0qniALAE_aws_transcribe.json  -CH5pxQYxmk.json  -QFh8ApuoGc.json  -QFh8ApuoGc_aws_transcribe.json  -fSPtWfYO-s.json  -fSPtWfYO-s_aws_transcribe.json  -fygSgoNDaA.json  -fygSgoNDaA_aws_transcribe.json  -p-S5tiscQ4.json  -p-S5tiscQ4_aws_transcribe.json  -r1vYoD49RU.json  -r1vYoD49RU_aws_transcribe.json  -rslV13HoIc.json  -rslV13HoIc_aws_transcribe.json  02Kq-BP-KRs.json  02Kq-BP-KRs_aws_transcribe.json  09CeTNkhrHk.json  0DEwCYU-HNA.json  0DEwCYU-HNA_aws_transcribe.json  0GZ7l1BsVrI.json  0GZ7l1BsVrI_aws_transcribe.json  0HCDHVpMX8E.json  0NfhxNu7pJ8.json  0NfhxNu7pJ8_aws_transcribe.json  0qMW2X7F42Y.json  0qMW2X7F42Y_aws_transcribe.json  0rSndvrxQ2U.json  0rSndvrxQ2U_aws_transcribe.json  0vbw-ywRROs.json  (+1015 more)
(+487 files in other folders)
